apps/web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: apps--web
spec:
  ports:
    - port: 80
      targetPort: 5001
  selector:
    app: web
